# local_notifier

./: CHANGELOG.md  README-ZH.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/lib/pages/: home.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: local_notifier.dart
lib/src/: display.dart  local_notification.dart  local_notification_action.dart  local_notification_close_reason.dart  local_notification_duration.dart  local_notification_listener.dart  local_notifier.dart  shortcut_policy.dart
linux/: CMakeLists.txt  local_notifier_plugin.cc
linux/include/local_notifier/: local_notifier_plugin.h
macos/: local_notifier.podspec
macos/Classes/: LocalNotifierPlugin.swift
test/: local_notifier_test.dart
windows/: CMakeLists.txt  local_notifier_plugin.cpp  wintoastlib.cpp
windows/include/local_notifier/: local_notifier_plugin.h
